--- a/Pages/DevicePage.xaml
+++ b/Pages/DevicePage.xaml
@@ -14,6 +14,11 @@
                 SemanticProperties.HeadingLevel="Level1"
                 FontSize="24"
                 HorizontalOptions="Center"/>
+            
+            <Label
+                x:Name="DeviceInfoLabel"
+                FontSize="12"
+                HorizontalOptions="Center"/>
         </VerticalStackLayout>
     </ScrollView>
 
